--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,14 +1,14 @@
 {
   "home": {
-    "Home title": "عنوان المنزل",
-    "Home description": "وصف المنزل"
+    "Home title": "العنوان الرئيسي",
+    "Home description": "الوصف الرئيسي للموقع"
   },
   "about": {
     "About title": "حول العنوان",
     "About description": "حول الوصف"
   },
   "header": {
-    "Home": "مسكن",
-    "About": "حول"
+    "Home": "الرئيسة",
+    "About": "عن الشركة"
   }
 }
